# RPSopwith

./: .gitignore  CMakeLists.txt  README.md
Music/: SOPWITH.RPT
docs/: asset-inventory.md  xram-ledger.md
images/: HUD_tiles_4bpp_palette.h  player_bank_strip_4bpp_palette.h  projectiles_strip_4bpp_palette.h  targets_strip_4bpp_palette.h  terrain_tileset_4bpp_palette.h
src/: ambient_birds.c  ambient_birds.h  ambient_flocks.c  ambient_flocks.h  constants.h  enemy_planes.c  enemy_planes.h  flight.c  flight.h  ground_targets.c  ground_targets.h  help.txt  input.c  input.h  main.c  menu.c  menu.h  minimap.c  minimap.h  music_player.c  music_player.h  original_ground_3000.h  projectiles.c  projectiles.h  resources.c  resources.h  sfx.c  sfx.h  sprite_mode5.c  sprite_mode5.h  text_mode1.c  text_mode1.h  tile_mode2.c  tile_mode2.h
src/config/: feature_flags.h
src/game/: game.c  game.h
src/game/terrain/: original_ground_2048.h  terrain.c  terrain.h
src/platform/: frame_sync.c  frame_sync.h  input.c  input.h  video.c
src_old/: constants.h  help.txt
src_old/game/terrain/: terrain.h
src_old/platform/: input.h  video.h
srcbak/: ambient_birds.c  enemy_planes.h  flight.c  flight.h  input.c  projectiles.h  sprite_mode5.c  text_mode1.c
tools/: export_ground_bin.py  extract_sopwith_ground.py  generate_minimap_png.py  generate_terrain_mode2_assets.py
tools/assets/: convert_sprite.py  generate_player_strip.py  generate_projectiles_strip.py  generate_targets.py
